--- a/css/theme-pdbe-green.css
+++ b/css/theme-pdbe-green.css
@@ -43,6 +43,6 @@ a.tag:hover { color: #fff; }
   color: #fff;
   background: #666; }
 
-div.masthead { background-color: rgb(116,179,96); }
+.masthead { background-color: rgb(116,179,96); }
 
 /* end */
