--- a/css/theme-ebi-research.css
+++ b/css/theme-ebi-research.css
@@ -43,6 +43,6 @@ a.tag:hover { color: #fff; }
   color: #fff;
   background: #666; }
 
-div.masthead { background-color: rgb(109,171,73); }
+.masthead { background-color: rgb(109,171,73); }
 
 /* end */
