--- a/css/theme-embl-petrol.css
+++ b/css/theme-embl-petrol.css
@@ -43,6 +43,6 @@ a.tag:hover { color: #fff; }
   color: #fff;
   background: #666; }
 
-div.masthead { background-color: rgb(0,124,130); }
+.masthead { background-color: rgb(0,124,130); }
 
 /* end */
