--- a/libraries/Choices/assets/styles/css/choices.css
+++ b/libraries/Choices/assets/styles/css/choices.css
@@ -4,13 +4,13 @@
 .choices {
   position: relative;
   margin-bottom: 24px;
-  font-size: 16px; }
+  font-size: 1.25rem; }
   .choices:focus {
     outline: none; }
   .choices:last-child {
     margin-bottom: 0; }
   .choices.is-disabled .choices__inner, .choices.is-disabled .choices__input {
-    background-color: #EAEAEA;
+    background-color: #eaeaea;
     cursor: not-allowed;
     user-select: none; }
   .choices.is-disabled .choices__item {
@@ -44,7 +44,7 @@
     .choices[data-type*="select-one"] .choices__button:hover, .choices[data-type*="select-one"] .choices__button:focus {
       opacity: 1; }
     .choices[data-type*="select-one"] .choices__button:focus {
-      box-shadow: 0px 0px 0px 2px #00BCD4; }
+      box-shadow: 0px 0px 0px 2px #007c82; }
   .choices[data-type*="select-one"]:after {
     content: "";
     height: 0;
@@ -67,37 +67,37 @@
 .choices[data-type*="select-multiple"] .choices__button, .choices[data-type*="text"] .choices__button {
   position: relative;
   display: inline-block;
+  color: #f8f8f8;
   margin-top: 0;
-  margin-right: -4px;
   margin-bottom: 0;
-  margin-left: 8px;
-  padding-left: 16px;
-  border-left: 1px solid #008fa1;
-  background-image: url("../../icons/cross.svg");
-  background-size: 8px;
-  width: 8px;
-  line-height: 1;
-  opacity: .75; }
+  width: 20px;
+  line-height: 1; }
   .choices[data-type*="select-multiple"] .choices__button:hover, .choices[data-type*="select-multiple"] .choices__button:focus, .choices[data-type*="text"] .choices__button:hover, .choices[data-type*="text"] .choices__button:focus {
     opacity: 1; }
+
+.choices[data-type*="select-multiple"] .choices__button:before, .choices[data-type*="text"] .choices__button:before {
+  content: 'x ';
+  font-size: 0.8rem;
+  font-family: 'EBI-Functional';
+  padding: 0.5rem .25rem;
+  display: inline-block; }
 
 .choices__inner {
   display: inline-block;
   vertical-align: top;
   width: 100%;
-  background-color: #f9f9f9;
   padding: 7.5px 7.5px 3.75px;
   border: 1px solid #DDDDDD;
-  border-radius: 2.5px;
-  font-size: 14px;
+  border-radius: 0;
+  font-size: 1rem;
   min-height: 44px;
   overflow: hidden; }
   .is-focused .choices__inner, .is-open .choices__inner {
     border-color: #b7b7b7; }
   .is-open .choices__inner {
-    border-radius: 2.5px 2.5px 0 0; }
+    border-radius: 0 0 0 0; }
   .is-flipped.is-open .choices__inner {
-    border-radius: 0 0 2.5px 2.5px; }
+    border-radius: 0 0 0 0; }
 
 .choices__list {
   margin: 0;
@@ -116,21 +116,21 @@
   .choices__list--multiple .choices__item {
     display: inline-block;
     vertical-align: middle;
-    border-radius: 20px;
+    border-radius: 0;
     padding: 4px 10px;
-    font-size: 12px;
+    font-size: 0.8rem;
     font-weight: 500;
     margin-right: 3.75px;
     margin-bottom: 3.75px;
-    background-color: #00BCD4;
-    border: 1px solid #00a5bb;
+    background-color: #007c82;
+    border: 1px solid #006469;
     color: #FFFFFF;
     word-break: break-all; }
     .choices__list--multiple .choices__item[data-deletable] {
       padding-right: 5px; }
     .choices__list--multiple .choices__item.is-highlighted {
-      background-color: #00a5bb;
-      border: 1px solid #008fa1; }
+      background-color: #006469;
+      border: 1px solid #004b4f; }
     .is-disabled .choices__list--multiple .choices__item {
       background-color: #aaaaaa;
       border: 1px solid #919191; }
@@ -140,12 +140,12 @@
   z-index: 1;
   position: absolute;
   width: 100%;
-  background-color: #FFFFFF;
+  background-color: #f8f8f8;
   border: 1px solid #DDDDDD;
   top: 100%;
   margin-top: -1px;
-  border-bottom-left-radius: 2.5px;
-  border-bottom-right-radius: 2.5px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   overflow: hidden;
   word-break: break-all; }
   .choices__list--dropdown.is-active {
@@ -167,13 +167,13 @@
   .choices__list--dropdown .choices__item {
     position: relative;
     padding: 10px;
-    font-size: 14px; }
+    font-size: 1rem; }
   @media (min-width: 640px) {
     .choices__list--dropdown .choices__item--selectable {
       padding-right: 100px; }
       .choices__list--dropdown .choices__item--selectable:after {
         content: attr(data-select-text);
-        font-size: 12px;
+        font-size: 0.8rem;
         opacity: 0;
         position: absolute;
         right: 10px;
@@ -197,33 +197,32 @@
 
 .choices__heading {
   font-weight: 600;
-  font-size: 12px;
+  font-size: 0.8rem;
   padding: 10px;
   border-bottom: 1px solid #f7f7f7;
   color: gray; }
 
 .choices__button {
-  text-indent: -9999px;
   -webkit-appearance: none;
   appearance: none;
   border: 0;
   background-color: transparent;
   background-repeat: no-repeat;
   background-position: center;
-  cursor: pointer; }
+  cursor: pointer;
+  overflow: hidden;
+  height: 1.25rem; }
   .choices__button:focus {
     outline: none; }
 
 .choices__input {
   display: inline-block;
   vertical-align: baseline;
-  background-color: #f9f9f9;
-  font-size: 14px;
+  font-size: 0.8rem;
   margin-bottom: 5px;
   border: 0;
-  border-radius: 0;
   max-width: 100%;
-  padding: 4px 0 4px 2px; }
+  box-shadow: none; }
   .choices__input:focus {
     outline: 0; }
 
