Refine choices styling

--- a/libraries/Choices/assets/styles/css/choices.css
+++ b/libraries/Choices/assets/styles/css/choices.css
@@ -3,7 +3,7 @@
 ===============================*/
 .choices {
   position: relative;
-  margin-bottom: 24px;
+  margin-bottom: 1rem;
   font-size: 1.25rem; }
   .choices:focus {
     outline: none; }
@@ -24,7 +24,7 @@
     display: block;
     width: 100%;
     padding: 10px;
-    border-bottom: 1px solid #DDDDDD;
+    border-bottom: 1px solid #999;
     background-color: #FFFFFF;
     margin: 0; }
   .choices[data-type*="select-one"] .choices__button {
@@ -83,13 +83,13 @@
   vertical-align: top;
   width: 100%;
   padding: 7.5px 7.5px 3.75px;
-  border: 1px solid #DDDDDD;
+  border: 1px solid #999;
   border-radius: 0;
   font-size: 1rem;
   min-height: 44px;
   overflow: hidden; }
   .is-focused .choices__inner, .is-open .choices__inner {
-    border-color: #b7b7b7; }
+    border-color: #737373; }
   .is-open .choices__inner {
     border-radius: 0 0 0 0; }
   .is-flipped.is-open .choices__inner {
@@ -102,7 +102,6 @@
 
 .choices__list--single {
   display: inline-block;
-  padding: 4px 16px 4px 4px;
   width: 100%; }
   .choices__list--single .choices__item {
     width: 100%; }
@@ -137,7 +136,7 @@
   position: absolute;
   width: 100%;
   background-color: #f8f8f8;
-  border: 1px solid #DDDDDD;
+  border: 1px solid #999;
   top: 100%;
   margin-top: -1px;
   border-bottom-left-radius: 0;
@@ -147,7 +146,7 @@
   .choices__list--dropdown.is-active {
     display: block; }
   .is-open .choices__list--dropdown {
-    border-color: #b7b7b7; }
+    border-color: #737373; }
   .is-flipped .choices__list--dropdown {
     top: auto;
     bottom: 100%;
@@ -195,7 +194,7 @@
   font-weight: 600;
   font-size: 0.8rem;
   padding: 10px;
-  border-bottom: 1px solid #f7f7f7;
+  border-bottom: 1px solid #b3b3b3;
   color: gray; }
 
 .choices__button {
