--- a/libraries/Choices/assets/styles/scss/choices.scss
+++ b/libraries/Choices/assets/styles/scss/choices.scss
@@ -8,14 +8,14 @@ $choices-selector: 'choices' !default;
 $choices-font-size-lg: 1.25rem !default;
 $choices-font-size-md: 1rem !default;
 $choices-font-size-sm: .8rem !default;
-$choices-guttering: 24px !default;
+$choices-guttering: 1rem !default;
 $choices-border-radius: 0 !default;
 $choices-border-radius-item: 0 !default;
 $choices-bg-color: #f9f9f9 !default;
 $choices-bg-color-disabled: $ebi-colour-light-grey;
 $choices-bg-color-dropdown: $ebi-colour-light;
 $choices-text-color: #333333 !default;
-$choices-keyline-color: #DDDDDD !default;
+$choices-keyline-color: $ebi-colour-medium-grey;
 $choices-primary-color: $primary-color;
 $choices-disabled-color: #eaeaea !default;
 $choices-highlight-color: $choices-primary-color !default;
@@ -136,7 +136,6 @@ $choices-button-offset: 8px !default;
 
 .#{$choices-selector}__list--single {
   display: inline-block;
-  padding: 4px 16px 4px 4px;
   width: 100%;
   .#{$choices-selector}__item { width: 100%; }
 }
