Correct specificity of global-nav search hiding

--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -124,6 +124,9 @@ a:active {
   /* Global menu styling */
   nav ul#global-nav.menu li { border-right: none; display: inline-block; }
 
+  /* Disable masthead-black-bar search when told */
+  body.no-global-search .masthead-black-bar ul#global-nav.menu li.search { display: none; }
+
   /* Mobile logo */
   @media screen and (max-width: 40em) {
     nav ul#global-nav.menu li.home { display: none; }
@@ -140,9 +143,6 @@ a:active {
   @media screen and (min-width: 40em) {
     nav ul#global-nav.menu li.home-mobile { display: none; }
   }
-
-  /* Disable masthead-black-bar search when told */
-  body.no-global-search .masthead-black-bar ul.menu li.search { display: none; }
 
   .masthead-black-bar {
     a,
