--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -90,15 +90,15 @@ a:active {
 .secondary-background, a.secondary-background, .tag.secondary-background, .button.secondary-background { background: $ebi-colour-dark-grey; }
 .medium-gray-background, a.medium-gray-background, .tag.medium-gray-background, .button.medium-gray-background { background: $ebi-colour-medium-grey; }
 
-.ebi-color, .ebi-color cite, .ebi-color a, .ebi-color a:visited, .ebi-color h3, .ebi-color h4, .label.ebi-color, a.ebi-color, a:hover.ebi-color { color: $ebi-colour-petrol; }
-.services-color, .services-color cite, .services-color a, .services-color a:visited, .services-color h3, .services-color h4, .label.services-color, a.services-color, a:hover.services-color { color: $ebi-colour-services; }
-.research-color, .research-color cite, .research-color a, .research-color a:visited, .research-color h3, .research-color h4, .label.research-color, a.research-color, a:hover.research-color { color: $ebi-colour-light-green; }
-.training-color, .training-color cite, .training-color a, .training-color a:visited, .training-color h3, .training-color h4, .label.training-color, a.training-color, a:hover.training-color { color: $ebi-colour-training; }
-.industry-color, .industry-color cite, .industry-color a, .industry-color a:visited, .industry-color h3, .industry-color h4, .label.industry-color, a.industry-color, a:hover.industry-color { color: $ebi-colour-industry; }
-.elixir-color, .elixir-color cite, .elixir-color a, .elixir-color a:visited, .elixir-color h3, .elixir-color h4, .label.elixir-color, a.elixir-color, a:hover.elixir-color { color: $ebi-colour-elixir; }
-.white-color, .white-color cite, .white-color a, .white-color a:visited, .white-color h3, .white-color h4, .label.white-color, a.white-color, a:hover.white-color { color: $ebi-colour-white; }
-.secondary-color, .secondary-color cite, .secondary-color a, .secondary-color a:visited, .secondary-color h3, .secondary-color h4, .label.secondary-color, a.secondary-color, a:hover.secondary-color {color: $ebi-colour-dark-grey;}
-.medium-gray-color, .medium-gray-color cite, .medium-gray-color a, .medium-gray-color a:visited, .medium-gray-color h3, .medium-gray-color h4, .label.medium-gray-color, a.medium-gray-color, a:hover.medium-gray-color {color: $ebi-colour-medium-grey;}
+.ebi-color, .ebi-color cite, .ebi-color a, .ebi-color a:hover, .ebi-color a:visited, .ebi-color h3, .ebi-color h4, .label.ebi-color, a.ebi-color, a:hover.ebi-color { color: $ebi-colour-petrol; }
+.services-color, .services-color cite, .services-color a, .services-color a:hover, .services-color a:visited, .services-color h3, .services-color h4, .label.services-color, a.services-color, a:hover.services-color { color: $ebi-colour-services; }
+.research-color, .research-color cite, .research-color a, .research-color a:hover, .research-color a:visited, .research-color h3, .research-color h4, .label.research-color, a.research-color, a:hover.research-color { color: $ebi-colour-light-green; }
+.training-color, .training-color cite, .training-color a, .training-color a:hover, .training-color a:visited, .training-color h3, .training-color h4, .label.training-color, a.training-color, a:hover.training-color { color: $ebi-colour-training; }
+.industry-color, .industry-color cite, .industry-color a, .industry-color a:hover, .industry-color a:visited, .industry-color h3, .industry-color h4, .label.industry-color, a.industry-color, a:hover.industry-color { color: $ebi-colour-industry; }
+.elixir-color, .elixir-color cite, .elixir-color a, .elixir-color a:hover, .elixir-color a:visited, .elixir-color h3, .elixir-color h4, .label.elixir-color, a.elixir-color, a:hover.elixir-color { color: $ebi-colour-elixir; }
+.white-color, .white-color cite, .white-color a, .white-color a:hover, .white-color a:visited, .white-color h3, .white-color h4, .label.white-color, a.white-color, a:hover.white-color { color: $ebi-colour-white; }
+.secondary-color, .secondary-color cite, .secondary-color a, .secondary-color a:hover, .secondary-color a:visited, .secondary-color h3, .secondary-color h4, .label.secondary-color, a.secondary-color, a:hover.secondary-color {color: $ebi-colour-dark-grey;}
+.medium-gray-color, .medium-gray-color cite, .medium-gray-color a, .medium-gray-color hover, .medium-gray-color a:visited, .medium-gray-color h3, .medium-gray-color h4, .label.medium-gray-color, a.medium-gray-color, a:hover.medium-gray-color {color: $ebi-colour-medium-grey;}
 
   /*
     SITE-WIDE MASTHEAD LAYOUT AND SIZE
