Fix white spare on readmore
#88

--- a/css/ebi-global.css
+++ b/css/ebi-global.css
@@ -928,12 +928,16 @@ code {
     color: #666;
     margin-bottom: .5rem; }
 
-a.read-more:after,
-a.readmore:after,
-a.more:after {
-  content: " >";
-  font-family: "EBI-Functional";
-  font-size: .85em; }
+a.read-more,
+a.readmore,
+a.more {
+  white-space: nowrap; }
+  a.read-more:after,
+  a.readmore:after,
+  a.more:after {
+    content: " >";
+    font-family: "EBI-Functional";
+    font-size: .85em; }
 
 /* custom spacing */
 .margin-top-none {
