--- a/libraries/foundation-6/css/foundation-lite.css
+++ b/libraries/foundation-6/css/foundation-lite.css
@@ -490,13 +490,6 @@ button {
 pre {
   overflow: auto; }
 
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: inherit; }
-
 .is-visible {
   display: block !important; }
 
@@ -1805,21 +1798,15 @@ kbd {
   position: absolute !important;
   width: 1px;
   height: 1px;
-  padding: 0;
   overflow: hidden;
-  clip: rect(0, 0, 0, 0);
-  white-space: nowrap;
-  clip-path: inset(50%);
-  border: 0; }
+  clip: rect(0, 0, 0, 0); }
 
 .show-on-focus:active, .show-on-focus:focus {
   position: static !important;
   width: auto;
   height: auto;
   overflow: visible;
-  clip: auto;
-  white-space: normal;
-  clip-path: none; }
+  clip: auto; }
 
 .show-for-landscape,
 .hide-for-portrait {
