--- a/css/ebi-global.scss
+++ b/css/ebi-global.scss
@@ -641,6 +641,31 @@ a:active {
     overflow: hidden;
   }
 
+  // image .highlight-caption
+  a.highlight-caption,
+  .highlight-caption {
+    z-index: 1;
+    position: relative;
+    top: -3rem;
+    color: #fff;
+    padding: .25rem .5rem;
+    background: #333;
+    border-bottom: none;
+  }
+  .highlight-caption.highlight-caption-big {
+    top: -8rem;
+    display: inline-block;
+    margin-bottom: -5rem;
+  }
+  // Better positioning when combined with position-relative
+  .position-relative > .highlight-caption.highlight-caption-big {
+    position: absolute;
+    top: initial;
+    bottom: 3%;
+    margin-bottom: 0;
+  }
+
+  // image overlays
   .medium-4 > .with-overlay,
   .medium-3 > .with-overlay {
     // sidebar overlays should always have a bottom margin
@@ -753,7 +778,13 @@ code { font-size: .95rem; }
 // hide
 .hidden, .hide { display: none; }
 // inline-block
+.inline { display: inline; }
 .inline-block { display: inline-block; }
+// positioning
+.position-relative { position: relative; }
+.position-absolute { position: absolute; }
+.position-static { position: static; }
+.position-fixed { position: fixed; }
 // no margins
 .no-margin { margin: 0; }
 // no underline for links
